[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "aiodrive"
version = "0.1.0"
description = "..."
authors = ["Simon Liétar"]
readme = "readme.md"
packages = [{ include = "aiodrive" }]
repository = "https://github.com/slietar/aiodrive"
license = "EUPL-1.2"

[tool.poetry.dependencies]
python = "^3.12"
pygments = "^2.18.0"
