[build-system]
requires = ["oryn~=1.2"]
build-backend = "oryn"

[project]
name = "aiodrive"
version = "1.0"
description = "Collection of utilies for working with asynchronous Python code"
license = "EUPL-1.2"
readme = "readme.md"
requires-python = "~=3.12.0"

[project.urls]
Repository = "https://github.com/slietar/aiodrive"

[tool.oryn]
include = ["src/*"]
