[build-system]
requires = ["oryn~=1.3"]
build-backend = "oryn"

[project]
name = "aiodrive"
version = "1.0"
description = "Collection of utilies for working with asynchronous Python code"
license = "EUPL-1.2"
readme = "readme.md"
requires-python = "~=3.12"
dependencies = [
    "ruff>=0.12.5",
]

[project.urls]
Repository = "https://github.com/slietar/aiodrive"

[tool.oryn]
include = ["src/*"]
ignore = ["/src/aiodrive/experiments"]

[tool.ruff]
include = ["src/**/*.py"]

[tool.ruff.lint]
select = ["ANN001", "ANN002", "ANN003", "COM812", "COM818", "E", "F", "FURB", "PTH", "RUF", "UP"]
ignore = ["E501", "E731", "UP045"]
